Change main function to work with double values.